[package]
name = "passmanager"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
egui = "0.18.1"
eframe = "0.18.0"
rfd = "0.8.4"
serde_json = "1.0.81"
serde = {version = "1.0.137" , features = ["derive"]}
egui_extras = "0.18.0"
blake2b_simd = "1.0.0"
aes-gcm-siv = "0.10.3"